Got the highlight/border to work for a paragraph

--- a/walrus.html
+++ b/walrus.html
@@ -15,7 +15,16 @@
 
       <button class="btn btn-outline-dark" id="dark">Dark</button>
       <button class="btn btn-outline-secondary" id="medium">Grey</button>
-      <button class="btn btn-outline-light" id="light">Light Purple</button>
+      <button class="btn btn-outline-primary" id="light">Light Purple</button>
+      <button class="btn btn-outline-info" id="default">Back to Default</button>
+    </div><br>
+
+    <div class="container">
+
+      <div class="p1-default" id="p1-none">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis nunc sed augue lacus viverra vitae congue. Neque aliquam vestibulum morbi blandit cursus risus at ultrices. Quis varius quam quisque id diam vel. Quam nulla porttitor massa id neque aliquam vestibulum. Orci porta non pulvinar neque. Mollis nunc sed id semper risus in hendrerit gravida rutrum. Lobortis mattis aliquam faucibus purus in. At ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget. Aliquam ultrices sagittis orci a. Dui id ornare arcu odio. Nulla aliquet enim tortor at. Venenatis cras sed felis eget velit aliquet sagittis id consectetur. Quis risus sed vulputate odio ut enim blandit. Non consectetur a erat nam at lectus. A diam maecenas sed enim ut sem.</p>
+      </div>
+
     </div>
 
     <div class="container">
